# SGS.ai

./: .appignore  .coreignore  .gitignore  Dockerfile  README.md  README_SHORT.md  README_rus.md  SGS_ai.md  TechnicalProposal.md  TechnicalProposal_short.md  bootstrap.sh  build.sh  build_package.jl  data.h5  docker-compose.yml  example.yaml  gps_demo.ipynb  hello.py  illustrations.ipynb  key_api.txt  meta_algebra.ipynb  pyproject.toml  redis_dev.ipynb  sgs_ai_core.ipynb  tensor_demo.ipynb  test_api.sh  test_py.ipynb  triangulation.py
.hdf5/: Dockerfile  hdf5_server.py
.redis/: Dockerfile  redis.conf
DeepSeekDialogues/MS_Word/: Dialogues with DeepSeek_ Tao (Lao Tszi), Spinoza and Entanglement.docx  Dialogues with DeepSeek_Quantum-Inspired AI Chip Part 1.docx  Dialogues with DeepSeek_Quantum-Inspired AI Chip Part 2.docx  Dialogues with DeepSeek_Quantum-Inspired AI Chip Part 3.docx  Dialogues with DeepSeek_Quantum-Inspired AI Chip Part 4.docx  PhilosophicalFramework.docx  TechnicalProposal.docx
FPGA/: adaptive_hll_cell.v  hll_3d_cell.v  hll_3d_cell.v.out  hll_cell.v  network_fabric.v
dialectics/: dialectics.ipynb
hdf5/: Dockerfile  hdf5_server.py
praxis/: praxis.ipynb
redis/: Dockerfile  redis.conf
sgs_core/: Dockerfile  core_server.py  meta_algebra.py  meta_hdf5.py  meta_ids.py  meta_redis.py  ping_redis.py  u_controller.py  universal_controller.py
sgs_core/HllSets/src/: HllSets.jl
src/: hll_algebra.lua  sets32.jl
src/sgs_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
